prodMetadata/src/objects/Incidents__c.object
<CustomObject>
    <description>This object is used to track incidences involving mainly member veterans as reported in their interactions with IAVA employees through COV, email, phone calls and membership events.</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If Member Event, which one?</description>
        <inlineHelpText>If Member Event, which one?</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incidents</relationshipLabel>
        <relationshipName>Incidents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Incident__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Date/Time of Incident</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Describe the incident in detail.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Follow-up Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Incidents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_up_Description__c</fullName>
        <label>Follow-up Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_Due_Date__c</fullName>
        <defaultValue>Today() + 2</defaultValue>
        <label>Follow-up Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Type__c</fullName>
        <label>Follow-up Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Monitor</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Severity__c</fullName>
        <label>Incident Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Casual</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Serious</fullName>
                </value>
                <value>
                    <fullName>Anxious</fullName>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Emergency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <label>Incident Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Behavior</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Detail__c</fullName>
        <label>Location Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Location_Medium__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>COV Forum</fullName>
                </value>
                <value>
                    <fullName>COV Chat</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>MySpace</fullName>
                </value>
                <value>
                    <fullName>Flickr</fullName>
                </value>
                <value>
                    <fullName>Youtube</fullName>
                </value>
                <value>
                    <fullName>Vimeo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Medium__c</fullName>
        <label>Location/Medium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>COV</fullName>
                </value>
                <value>
                    <fullName>Member Event</fullName>
                </value>
                <value>
                    <fullName>Social Network</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Ongoing</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Detail__c</fullName>
        <label>Type Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Incident_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alcohol/Substance Abuse</fullName>
                </value>
                <value>
                    <fullName>Emotional Display</fullName>
                </value>
                <value>
                    <fullName>Fighting</fullName>
                </value>
                <value>
                    <fullName>Belligerent Behavior</fullName>
                </value>
                <value>
                    <fullName>Posting</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Incidents ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>